--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 		<!--external script links-->
 		<script type="text/javascript" src="lib/d3.js"></script>
+		<script type="text/javascript" src="lib/d3-queue.v2.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 
 	</body>
