--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 
 	<body>
 
+		<!lib scripts>
 		<script type="text/javascript" src="lib/d3.js"></script>
 		<script type="text/javascript" src="lib/d3-queue.v2.min.js"></script>
+		<script type="text/javascript" src="lib/d3/topojson.min.js"></script>
+
+		<!main.js>
 		<script type="text/javascript" src="js/main.js"></script>
+
 
 	</body>
 </html>
