struggling with topojson undefined type error
Uncaught (in promise) TypeError: Cannot read properties of undefined (reading 'type')
    at Object.S [as feature] (topojson.min.js:2:5551)
    at callback (main.js:46:35)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title></title>
+		<title>January Climate Visualization</title>
 
 		<link rel="stylesheet" href="css/style.css">
 
@@ -12,9 +12,10 @@
 	<body>
 
 		<!lib scripts>
+		<script type="text/javascript" src="lib/d3/topojson.min.js"></script>
 		<script type="text/javascript" src="lib/d3.js"></script>
 		<script type="text/javascript" src="lib/d3-queue.v2.min.js"></script>
-		<script type="text/javascript" src="lib/d3/topojson.min.js"></script>
+
 
 		<!main.js>
 		<script type="text/javascript" src="js/main.js"></script>
